# ormp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
bench/: README.md  accuracy-large-1.csv  accuracy-large-2.csv  accuracy-large-3.csv  accuracy-large-4.csv  accuracy-large-5.csv  accuracy-various-nonzero.csv  accuracy.csv  accuracy.py  common.py  ormp-omp.csv  ormp-omp.py  plots.py
src/hotpursuit/: __init__.py  hotpursuit.py  impl_jax.py  impl_np.py  sklearn.py
src/ormp/: __init__.py  impl_jax.py  impl_np.py  ormp.py
tests/: test_hotpursuit.py  test_ormp.py  test_sklearn.py
