[metadata]
name = hotpursuit
version = attr: hotpursuit.__version__
author = Søren Fuglede Jørgensen
author_email = sfj@kvantify.dk
description = Algorithms for solving the sparse linear regression problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kvantify/hot-pursuit

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    numpy
    scikit-learn

[options.packages.find]
where = src

[flake8]
max-line-length = 88
# Black will enforce an equal amount of whitespace around slice operators.
# Due to this, Flake8 will raise E203 whitespace before ':' warnings.
# Since this warning is not PEP 8 compliant, Flake8 should be configured to ignore it
extend-ignore = E203
